--- a/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml
+++ b/Areas/Admin/Views/Shared/_LayoutPageAdmin.cshtml
@@ -111,7 +111,7 @@
                     <div class="btn-group">
                         <button type="button" class="btn  dropdown-toggle text-white user-profile-dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false" id="dropdownMenuButton">
                             <img src="~/source/logo.jpg" alt="Profile Picture" class="rounded-circle" width="30" height="30">
-                            Tên người dùng
+                            admin
                         </button>
                         <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
                             <a class="dropdown-item" href="#">Tài khoản</a>
