--- a/Areas/Teacher/Views/HomeTeacher/Manage_Classes.cshtml
+++ b/Areas/Teacher/Views/HomeTeacher/Manage_Classes.cshtml
@@ -8,7 +8,7 @@
 
 <div class="row">
     <div class="col-md-12">
-        <h2>Manage Classes</h2>
+        <h2>Quản lý lớp học</h2>
 
         @if (Model != null && Model.Any())
         {
