--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,9 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
     ViewBag.Active = "home";
+
 }
+
 
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
@@ -14,171 +16,81 @@
         });
     });
 </script>
-
-<div class="bg-white ">
-    @*<h2 class="text-primary">Phố Thị Music - Nơi tài năng toả sáng </h2>
-        <br />
-        <h4 class="text-warning">
-            Kính gửi mọi người yêu nghệ thuật,
-
 <style>
-    body{
-        margin-top:10px;
-        margin-bottom:10px;
+    body {
+        color: azure;
     }
+
     .sec {
         min-height: auto;
         min-width: auto;
     }
-    .section1{
-        height:500px;
-        z-index:1;
+
+    .section1 {
+        height: 500px;
+        z-index: 1;
         background-position: 50% 50%;
-        display:block;
-       
-        position:relative;
+        display: block;
+        position: relative;
     }
+
     .section2 {
-        height:150px;
-        width:auto;
-      
-       
+        height: 150px;
+        width: auto;
     }
-    .sec1-left{
-       
-        max-width:50%;
+
+    .sec1-left {
+        max-width: 50%;
         padding: 0 10px 20px 10px;
     }
-    .sec1-right{
-        position:relative;
-        display:block;
 
+    .sec1-right {
+        position: relative;
+        display: block;
     }
-    .section3{
-        height:350px;
-       
-    }
-    .section4{
-        height:650px;
-        
-    }
-/*    .section5{
-        height:350px;
-       
-    }*/
-
-
-</style>
-
-<body>
-    @* ảnh tự chuyển động *@
-    <div class="bg-white " style="height:600px;width:100%">
-        @*<h2 class="text-primary">Phố Thị Music - Nơi tài năng toả sáng </h2>
-
-            <br />
-            Chúng ta đang mở cửa cho một cuộc phiêu lưu sáng tạo đầy thú vị và cơ hội tham gia vào một khoá học nghệ thuật đặc biệt. Đây là cơ hội để bạn thể hiện tài năng, phát triển kỹ năng và khám phá bản thân qua nghệ thuật.
-
-        </h4>*@
-    <div class="row row-cols-2">
-        <div class="col-sm-8">
-            <img src="~/source/maxresdefault.jpg" class="img-fluid mx-auto d-block" />
-        </div>
-        <div class="col-sm-4">
-            <h1 class="display-2">Phố Thị Music</h1>
-            <div class="row-cols-sm-auto">
-                <div class="col-sm">
-                    <p style="font-size:25px">
-                        Với đội ngũ giảng viên với nhiều năm kinh nghiệm giảng dạy, sự tận tâm, năng nổ đi kèm
-                        với môi trường năng động, thoải mái cho quá trình học tập và phát triển của học viên,
-                        chúng tôi tự tin có thể cam kết chất lượng đầu ra đào tạo cho học viên, luôn tạo điều kiện để học viên có thể thoả sức
-                        sáng tạo và cháy hết mình với âm nhạc!
-                    </p>
-                    <div class="row-cols-sm-auto">
-                        <div class="col-sm-8"></div>
-                        <div class="col-sm-4">
-                            <div style="display: flex; align-items: center; width:300px">
-                                <button class="btn btn-outline-success btn-lg" id="customButtonStudy">Bắt đầu nào!</button>
-                                <span style="display:none">@Html.ActionLink("Go to page!", "Study", "Home", null, new { id = "actionStudyLink" })</span>
-                            </div>
-
-<head>
-    <style>
-        body {
-            margin-top: 10px;
-            background: url("~/source/section5a.png");
-            background-repeat: no-repeat;
-            background-size: cover;
-        }
-
-
-        .sec {
-            min-height: auto;
-            min-width: auto;
-        }
-
-        .section1 {
-            height: 500px;
-            z-index: 1;
-            background-position: 50% 50%;
-            display: block;
-            position: relative;
-        }
-
-        .section2 {
-            height: 150px;
-            width: auto;
-        }
-
-        .sec1-left {
-            max-width: 50%;
-            padding: 0 10px 20px 10px;
-        }
-
-        .sec1-right {
-            position: relative;
-            display: block;
-        }
 
     .section3 {
-        
     }
 
     .section4 {
         margin: 0 auto;
     }
 
-    .section4 img {
+        .section4 img {
             height: 75%; /* Độ cao cố định của ảnh */
             width: 100%;
             margin: 5px; /* Khoảng cách 10px giữa các ảnh */
-    }
+        }
 
     .sec section5 {
+        margin-top: 10px;
         height: 350px;
     }
 
-        .sec5-left {
-            min-height: auto;
-            min-width: auto;
-            max-width: 40%;
-            height: 350px;
-        }
+    .sec5-left {
+        min-height: auto;
+        min-width: auto;
+        max-width: 40%;
+        height: 350px;
+    }
 
 
-        .sec5-right {
-            min-height: auto;
-            min-width: auto;
-            max-width: 60%;
-        }
+    .sec5-right {
+        min-height: auto;
+        min-width: auto;
+        max-width: 60%;
+    }
 
-        .section6 {
-            height: 150px;
-        }
-    </style>
-</head>
+    .section6 {
+        height: 150px;
+    }
 
-<body >
+    body {
+        background-image: linear-gradient(45deg,black,#05064b)
+    }
+</style>
 
+<body>
     @* ảnh tự chuyển động *@
     <div>
 
@@ -217,7 +129,7 @@
     </div>
 
     @* nói về giá trị mang lại của trung tâm *@
-    <div class="sec section3 container"style="padding-bottom:30px;">
+    <div class="sec section3 container" style="padding-bottom:30px;">
         <div class="col " style="padding-top:30px;">
             <div class="row " style=" ">
                 <p class="align-content-center  " style="font-size:50px;text-align:center;"><span style="color:orangered">Phố Thị Music</span> <span style="color: black"> Mang Lại giá trị gì cho bạn</span></p>
@@ -231,7 +143,7 @@
                     <img class="" src="~/source/icon-1.jpg" style="height:80px;width:80px;" />
                     <div style="padding-top:30px">
                         <span style="font:bold;font-size:30px">Đội Ngũ Giáo Viên</span>
-                   
+
                         <p class="container">
                             Các giáo viên có trình độ chuyên môn cao, chuyên nghiệp, nhiệt huyết và yêu trẻ.
                         </p>
@@ -284,7 +196,7 @@
 
     @* chương trình đào tạo của trung tâm *@
 
-    <div class="sec section4 container" >
+    <div class="sec section4 container" style="">
         <div class="row text-center">
             <p style="font-size:30px;font:bold">
                 Chương trình đào tạo Phố Thị Music
@@ -297,11 +209,20 @@
         <div class="row">
 
             <div class="col-3 ">
-                <img src="~/source/piano.png" />
+                <a id="pianoLink" href="@Url.Action("Course_Piano", "Home")">
+                    <img src="~/source/piano.png" />
+                </a>
             </div>
 
-            <div class="col-3 " >
-                <img src="~/source/piano.png" />
+            <div class="col-3 ">
+
+
+                <a id="pianoLink" href="@Url.Action("Course_Piano", "Home")">
+                    <img src="~/source/piano.png" />
+                </a>
+
+
+
             </div>
 
             <div class="col-3 ">
@@ -311,10 +232,7 @@
             <div class="col-3 ">
                 <img src="~/source/piano.png" />
             </div>
-            @*<a class="" href="">
-            <img src="~/source/logo.jpg" alt="Avatar Logo" style="height:150px;" />
-            @Html.ActionLink("  ", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
-        </a>*@
+
 
 
 
@@ -322,9 +240,9 @@
     </div>
 
     @* nhận xét từ ph *@
-    <div class="sec section5 container">
-        <div class="row">
-            <div class="col-4 sec5-left">
+    <div class="sec section5 container" style="">
+        <div class="row mt-0" style="">
+            <div class="col-4 " style="align-items:center">
                 <img src="~/source/section5a.png" class="img-thumbnail" style="border:none" />
             </div>
             <div class="col-8 sec5-right">
@@ -335,15 +253,11 @@
                     <div class="Fly-cmt">
                         <img class="rounded d-block mx-auto  " src="~/source/person1.png" style="position:center ;height:100px;width:100px;margin-top:20px" />
                         <div style="margin-top:15px ; min-height:auto;min-height:auto;">
-                            <p class="text-center">aaaaa</p>
-
+                            <p class="text-center">Chương trình giảng dạy rất hay</p>
                         </div>
                     </div>
-                   
 
-            <div class="row row-cols-2">
-                <div class="col-sm-4">
-                    <h3>This is slide 1</h3>
+
                 </div>
             </div>
         </div>
@@ -351,4 +265,3 @@
 
 
 </body>
-
